# EZ-Astro-Calculator

./: CHECKLIST.md  FINAL_README.md  IMPLEMENTATION_PLAN.md  LAYOUT_REFERENCE.md  SAMPLE_BATCH.txt  START_TOMORROW.md  TECHNICAL_REFERENCE.md
astro-calc-COMPLETE/astro-calc/: .gitignore  ACTION_PLAN_SESSION_12.md  APPLY_FIX_QUICKSTART.md  AUTOFILL_DEBUG.md  AUTOFILL_TROUBLESHOOTING.md  BUILD_AND_TEST_GUIDE.md  CHECKLIST.md  COMPILATION_FIXES_SESSION_12.md  COMPILE_AND_RUN.md  CRITICAL_BUG_FIX_SESSION_11.md  Cargo.toml  DST_FIX_APPLIED_SESSION_12.md  DST_ISSUE_RESEARCH_SESSION_12.md  EPHEMERIS_FIX_SESSION_9.md  FIX_SUMMARY_SESSION_10.md  FIX_SUMMARY_SESSION_11.md  FRESH_CODEBASE_EVALUATION_NOV_6_2025.md  IMPLEMENTATION_GUIDE.md  LOCATION_SEARCH_FIX_COMPLETE.md  LOCATION_SEARCH_TEST.md  PROJECT_MANIFEST.md  PROJECT_PROGRESS_LOG.md  PROJECT_PROGRESS_LOG_UPDATED.md  README.md  ROOT_CAUSE_FINAL_SESSION_12.md  SESSION_12_COMPLETE.md  SESSION_12_PROGRESS_UPDATE.md  SESSION_12_RECOVERY_COMPLETE.md  SESSION_4_SUMMARY.md  SESSION_5_SUMMARY.md  SESSION_7_COMPLETE.md  SESSION_8_COMPLETE.md  START_HERE_SESSION_11.md  VERTEX_CORRECTION_SESSION_10.md  build.rs  config.toml.template  tauri.conf.json
astro-calc-COMPLETE/astro-calc/Old Files/: CODEBASE_EVALUATION_SUMMARY.md  DOCS_README.md  LOCATION_SEARCH_FIX.md  SESSION_RECOVERY.md  SESSION_SUMMARY.md
astro-calc-COMPLETE/astro-calc/backup/: Cargo.toml.bak  main.rs.bak
astro-calc-COMPLETE/astro-calc/dioxus-migration/: COMPLETE_SUMMARY.md  INSTALLATION_GUIDE.md  MIGRATE.bat  MIGRATION_PLAN.md  README.md  SESSION_6_SUMMARY.md  app.rs  (+10 more)
(+23 files in other folders)
