[package]
name = "astro-calc"
version = "0.1.0"
edition = "2021"

[dependencies]
# UI Framework (NEW - replaces Tauri)
dioxus = "0.5"
dioxus-desktop = "0.5"

# Existing dependencies (KEEP ALL OF THESE)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
chrono-tz = "0.9"  # For timezone lookups
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"
tokio = { version = "1", features = ["full"] }
regex = "1.10"

# Clipboard support (NEW)
copypasta = "0.10"

# Logging support (NEW - for location search debugging)
tracing = "0.1"

[build-dependencies]
# Keep Swiss Ephemeris compilation
cc = "1.0"

[lib]
name = "astro_calc"
crate-type = ["lib"]  # Changed from cdylib/rlib to just lib

# Remove the [[bin]] section - main.rs will be the default binary
